<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:paddingLeft="10dp"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/tresh_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trash"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/first_list"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="none" />

        <TextView
            android:id="@+id/interior_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interior"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/second_list"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="none" />

        <TextView
            android:id="@+id/clothing_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Clothing"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/third_list"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scrollbars="none" />
    </LinearLayout>
</ScrollView>

